--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <center>
-  <h1>安岳县韵洁电子商务服务部 官方网站</h1>
-  <a href="https://beian.miit.gov.cn/"><h3>ICP备案号:蜀ICP备20009192号-1</h3></a>
+  <h1>韵洁电子商务服务部 官方网站</h1>
+  <h2>本公司专注为韵速网络及其他合作伙伴提供:</h2>
+  <p>	零售：通信设备，代理中国移动授权业务，代理中国电信授权业务；网上商务咨询；代收、代送货物服务、仓储服务（不含危化品）；销售（互联网销售）：食品、饮料，纺织、服装及日用品，文化体育用品及器材，家用电器及电子产品，五金<br/>、家具及室内装饰材料，化肥、饲料、农膜、不再分装的包装农作物种子等；种植、销售：谷物农作物、油料农作物、水果、蔬菜；饲养、销售：家禽、牲畜；养殖、销售：淡水养殖产品。（依法须经批准的项目，经相关部门批准后方可开展经营活动）</p>
+  <br/>
+  <a href="https://beian.miit.gov.cn/"><h3>安岳县韵洁电子商务服务部 ICP备案号:蜀ICP备20009192号-1</h3></a>
 </center>
